--- a/Cadastro de fornecedores/Cadastro de fornecedores.html
+++ b/Cadastro de fornecedores/Cadastro de fornecedores.html
@@ -12,6 +12,12 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		
+		<link href="../Estilos/Estilo-do-site.css" type="text/css" rel="stylesheet" />
+		
+		<link href="../Script/Script.js" type="text/javascript"/>
+		
+		
 	</head>
 	<body>
 		<div>
