--- a/Login/Login.html
+++ b/Login/Login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">	
-	
+<html lang="en">		
 	<head>
 		<meta charset="utf-8" />
 		<meta name="Description" CONTENT="Formatura">
-		<title>Pagina de Login</title>	
+		<title>Login</title>	
 		<link href="../Estilos/Estilo-do-site.css" type="text/css" rel="stylesheet" />		
 		<link href="../Script/Script.js" type="text/javascript"/>	
-		</head>
+	</head>
 			<body>
 				<header>
 					<h1 class="cabeçalho">In-Formar</h1>
