--- a/Cadastro de fornecedores/Cadastro de fornecedores.html
+++ b/Cadastro de fornecedores/Cadastro de fornecedores.html
@@ -9,20 +9,21 @@
 			
 	</head>
 	<body>
-		<div>
-			<header>
-				<h1  class="cabeçalho">In-Formar</h1>
-			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-			<div></div>
-			
-		</div>
+		<<header>
+			<h1 class="cabeçalho">Cadastro de Fornecedores</h1>
+		</header>	 
+			<form id="form1" name="form1" method="post" action="cadforn.php"> 
+  				<fieldset> 
+  					<legend>Cadastro</legend> 
+  						<label for="nome">Nome:</label> 
+  						<input type="text" name="nome" id="nome" /> 
+  						<br /> 
+  						<label for="fone">Telefone:</label> 
+  						<input type="text" name="fone" id="fone" /> 
+  						<br /> 
+  						<label></label> 
+  						<input name="enviar" type="submit" value="Cadastrar" /> 
+  				</fieldset> 
+			</form> 
 	</body>
 </html>
