--- a/Cadastro comissao formatura/Cadastro de comissao de formaturas.html
+++ b/Cadastro comissao formatura/Cadastro de comissao de formaturas.html
@@ -2,26 +2,21 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="Description" CONTENT="Formatura">
 		<title>Cadastro de comissao de formaturas</title>
-		<meta name="description" content="" />
-		<meta name="author" content="jb99824" />
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+		
 		<link href="../Estilos/Estilo-do-site.css" type="text/css" rel="stylesheet" />		
 		<link href="../Script/Script.js" type="text/javascript"/>	
-		<form name="input"
-		action="html_form_action.asp"
-		method="get">
+			
+		<form name="input" action="html_form_action.asp" method="get">
 	</head>
 	<body>
+		<header>
+			<h1 class="cabeçalho">Cadastro de comissao de formaturas</h1>	
+		</header>
 		<div>
-			<header>
-				<h1>Cadastro de comissao de formaturas</h1>
-			</header>
 			<nav>
+				<fieldset class="caixa"> 
 				<p>
 					<td>Data de formatura:</td>
 						<input class="campo" type="date" required="Informe data de previsão de formatura"/>
@@ -38,7 +33,9 @@
 							<input class="campo" type="text" maxlength="100" required="Informe nome do representante" value="" size="43" name="nome" />	
 						</td>
 				</p>
+				</fieldset>
 				<h2> Comissão de Formatura</h2>
+				<fieldset class="caixa">
 				<ls id=1>1)
 					<p>
 						<td>Nome Completo:</td>
@@ -98,6 +95,8 @@
 					</p>
 				</ls>
 				<br />	
+				</fieldset>
+				<fieldset class="caixa">
 				<ls id=2> 2)
 					<p>
 						<td>Nome Completo:</td>
@@ -156,6 +155,8 @@
 							<input class="campo" type="number"/>
 					</p>
 				</ls>
+				</fieldset>
+				<fieldset class="caixa">
 				<br />
 				A Comissão de Formatura autoriza o fornecimento destas informações à empresas eventualmente interessadas em fazer contato com a Comissão.
 				<br />
@@ -165,21 +166,10 @@
 				<br>
 				<input type ="submit"
 				value ="Enviar Agora!">
-				
+				</fieldset>
 			</form>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/Fale conosco/fale conosco.html">Contact</a>
-				</p>
 			</nav>
 			<div></div>
-			<footer>
-				<p>
-					&copy; Copyright  by In_Formar
-				</p>
-			</footer>
-		</div>
+			</div>
 	</body>
 </html>
