Inclusao de login e senha no cadastro de comissao

--- a/Cadastro comissao formatura/Cadastro de comissao de formaturas.html
+++ b/Cadastro comissao formatura/Cadastro de comissao de formaturas.html
@@ -33,6 +33,19 @@
 							<input class="campo" type="text" maxlength="100" required="Informe nome do representante" value="" size="43" name="nome" />	
 						</td>
 				</p>
+				<p>
+					<td>E-mail:</td>
+						<td>
+							<input class="campo" type="email" maxlength="100" required="Informe e-mail da comissão" value="" function="isEmail" size="43" name="nome" />	
+						</td>
+				</p>
+				<p>
+					<td>Senha:</td>
+						<td>
+							<input class="campo" type="password" maxlength="20" required="Senha de no max 20 caracteres" value="" size="20"/>	
+						</td>
+				</p>
+				
 				</fieldset>
 				<h2> Comissão de Formatura</h2>
 				<fieldset class="caixa">
