--- a/Login/Login.html
+++ b/Login/Login.html
@@ -9,8 +9,19 @@
 	</head>
 			<body>
 				<header>
-					<h1 class="cabeçalho">In-Formar</h1>
-				</header>		
+					<h1 class="cabeçalho">In_Formar</h1>
+				</header>
+				<div id="menu">
+				<ul>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="fornecedores.html">Fornecedores</a></li>
+					<li><a href="#">Comiss&otilde;es</a></li>
+					<li><a href="#">Servi&ccedil;os</a></li>
+					<li><a href="#">Cota&ccedil;&otilde;es</a></li>
+					<li><a href="fotosevideos.html">Fotos e v&iacute;deos</a></li>
+					<li><a href="login.html">Sair</a></li>
+				</ul>
+			</div>		
 				</br>
 				</br>
 				</br>	
