--- a/Cadastro de fornecedores/Cadastro de fornecedores.html
+++ b/Cadastro de fornecedores/Cadastro de fornecedores.html
@@ -41,6 +41,7 @@
 							<option>Banda Musical</option>
 							<option>Serviço de Som</option>
 							<option>Decoração</option>
+							<option>Aluguel de Bekas</option>
 						</select>
 						<br><br>
   						<label for="fone" class="textoformulario">Telefone:</label> 
